# struct2hashmap

./: Cargo.toml  README.md
examples/: main.rs
src/: lib.rs
struct2hashmap_derive/: Cargo.toml
struct2hashmap_derive/src/: lib.rs
tests/: main.rs
