[package]
name = "struct2hashmap_derive"
version = "0.1.0"
authors = ["Sergey Chernomorets <s.chernomorets@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
# darling is implements std::fmt::Debug for syn::DeriveInput
#darling = "0.10"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
